--- a/assets/css/common/footer.css
+++ b/assets/css/common/footer.css
@@ -58,3 +58,10 @@
 #theme-toggle:focus {
     outline: 0;
 }
+
+#QR{padding-top:20px;}
+#QR a{border:0}
+#QR img{width:180px;max-width:100%;display:inline-block;margin:.8em 2em 0 2em}
+#rewardButton{border:1px solid #ccc;line-height:36px;text-align:center;height:36px;display:block;border-radius:4px;-webkit-transition-duration:.4s;transition-duration:.4s;background-color:#fff;color:#999;margin:0 auto;padding:0 25px}
+#rewardButton:hover{color:#f77b83;border-color:#f77b83;outline-style:none}
+#rewardButton{background-color: #f05050;color: white;border-radius: 50px;cursor: pointer;}
